[build-system]
requires = ["setuptools>=61.0", "requests", "bs4"]
build-backend = "setuptools.build_meta"


[project]
name = "finn_api"
version = "0.0.2"
authors = [
  { name="duggurd", email="alexanderhaugerud@gmail.com" },
]
description = "Simple wrapper/interface for finn.no APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/duggurd/finn_api"
"Bug Tracker" = "https://github.com/duggurd/finn_api/issues"